pkg/front_end/testcases/dot_shorthands/const_constructor_nonconst.dart.strong.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/dot_shorthands/const_constructor_nonconst.dart:14:9: Error: 'c' is already declared in this scope.
//   Color c = const .   red  (1);
//         ^
// pkg/front_end/testcases/dot_shorthands/const_constructor_nonconst.dart:11:9: Context: Previous declaration of 'c'.
//   Color c = const .red(1);
//         ^
//
// pkg/front_end/testcases/dot_shorthands/const_constructor_nonconst.dart:11:20: Error: Cannot invoke a non-'const' constructor where a const expression is expected.
// Try using a constructor or factory that is 'const'.
//   Color c = const .red(1);
//                    ^^^
//
// pkg/front_end/testcases/dot_shorthands/const_constructor_nonconst.dart:14:23: Error: Cannot invoke a non-'const' constructor where a const expression is expected.
// Try using a constructor or factory that is 'const'.
//   Color c = const .   red  (1);
//                       ^^^
//
import self as self;
import "dart:core" as core;

class Color extends core::Object {
  final field core::int x;
  constructor red(core::int x) → self::Color
    : self::Color::x = x, super core::Object::•()
    ;
}
static method test() → void {
  self::Color c = invalid-expression "pkg/front_end/testcases/dot_shorthands/const_constructor_nonconst.dart:11:20: Error: Cannot invoke a non-'const' constructor where a const expression is expected.
Try using a constructor or factory that is 'const'.
  Color c = const .red(1);
                   ^^^" as{TypeError,ForDynamic} self::Color;
  self::Color c = invalid-expression "pkg/front_end/testcases/dot_shorthands/const_constructor_nonconst.dart:14:9: Error: 'c' is already declared in this scope.
  Color c = const .   red  (1);
        ^" in invalid-expression "pkg/front_end/testcases/dot_shorthands/const_constructor_nonconst.dart:14:23: Error: Cannot invoke a non-'const' constructor where a const expression is expected.
Try using a constructor or factory that is 'const'.
  Color c = const .   red  (1);
                      ^^^";
}
